--- a/pages/projects.html
+++ b/pages/projects.html
@@ -128,7 +128,7 @@
                         </div>
                         <div class="col-12 col-md-5">
                             <div class="img-wrapper">
-                                <img src="https://www.gabrielavelitch.com/assets/images/corkino-432x243.png" alt="Mobirise">
+                                <img src="https://www.gabrielavelitch.com/assets/images/corkino-432x243.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -156,6 +156,34 @@
         </div>
     </div>
 </section>
+
+<section data-bs-version="5.1" class="features4 cid-sYzkrQZeug" id="features5-1m">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <div class="card-wrapper">
+                    <div class="row">
+                        <div class="col-12 col-md-7">
+                            <div class="text-wrapper">
+                                <h5 class="card-title mbr-fonts-style display-5" style="text-align:left;">
+                                    <strong>corkino</strong></h5>
+                                <p class="mbr-text mbr-fonts-style mb-5 display-4" style="text-align:justify;">Ultra-portable all-in-one MaxMSP controller<br></p>
+                                <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/projects/corkino.html" class="btn btn-primary display-4">Learn more</a></div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-5">
+                            <div class="img-wrapper">
+                                <img src="https://www.gabrielavelitch.com/assets/images/corkino-432x243.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+</section>
+
 
 
 <!-- Footer-->
