--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -401,7 +401,7 @@
       <div class="row mbr-gallery mt-4">
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/1.png" alt="" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/1.webp" alt="" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -409,7 +409,7 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/2.png" alt="" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/2.webp" alt="" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -417,16 +417,7 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/3.png" alt="" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
-            <div class="icon-wrapper">
-              <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
-            </div>
-          </div>
-
-        </div>
-        <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-          <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/4.png" alt="" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/3.webp" alt="" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -435,7 +426,7 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/5.png" alt="" data-slide-to="4" data-bs-slide-to="4" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/4.webp" alt="" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -444,7 +435,7 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/6.png" alt="" data-slide-to="5" data-bs-slide-to="5" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/5.webp" alt="" data-slide-to="4" data-bs-slide-to="4" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -453,7 +444,7 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/7.png" alt="" data-slide-to="6" data-bs-slide-to="6" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/6.webp" alt="" data-slide-to="5" data-bs-slide-to="5" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -462,7 +453,16 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/8.png" alt="" data-slide-to="7" data-bs-slide-to="7" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/7.webp" alt="" data-slide-to="6" data-bs-slide-to="6" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <div class="icon-wrapper">
+              <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
+            </div>
+          </div>
+
+        </div>
+        <div class="col-12 col-md-6 col-lg-3 item gallery-image">
+          <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/8.webp" alt="" data-slide-to="7" data-bs-slide-to="7" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -478,28 +478,28 @@
               <div class="carousel slide carousel-fade" id="lb-tz4TcXjy8v" data-interval="5000" data-bs-interval="5000">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/1.png" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/1.webp" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/2.png" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/2.webp" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/3.png" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/3.webp" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/4.png" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/4.webp" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/5.png" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/5.webp" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/6.png" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/6.webp" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/7.png" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/7.webp" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/8.png" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/8.webp" alt="">
                   </div>
                 </div>
                 <ol class="carousel-indicators">
