--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -521,7 +521,7 @@
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
-                  <a href="https://instagram.com/mobirise" target="_blank">
+                  <a href="https://www.linkedin.com/in/michelangelo-lupone-3462b85b/" target="_blank">
                     <span class="mbr-iconfont socicon socicon-linkedin"></span>
                   </a>
                 </div>
@@ -544,7 +544,7 @@
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
-                  <a href="https://instagram.com/mobirise" target="_blank">
+                  <a href="https://www.linkedin.com/in/bianchini-laura-9333a219/" target="_blank">
                     <span class="mbr-iconfont socicon socicon-linkedin"></span>
                   </a>
                 </div>
@@ -589,7 +589,7 @@
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
-                  <a href="https://instagram.com/mobirise" target="_blank">
+                  <a href="https://www.linkedin.com/in/silvia-lanzalone-32309311a/" target="_blank">
                     <span class="mbr-iconfont socicon socicon-linkedin"></span>
                   </a>
                 </div>
@@ -618,7 +618,7 @@
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
-                  <a href="https://instagram.com/mobirise" target="_blank">
+                  <a href="https://www.linkedin.com/in/alessio-gabriele-25871227/" target="_blank">
                     <span class="mbr-iconfont socicon socicon-linkedin"></span>
                   </a>
                 </div>
@@ -640,7 +640,7 @@
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
-                  <a href="https://instagram.com/mobirise" target="_blank">
+                  <a href="https://www.linkedin.com/in/emanuela-mentuccia-b1024a64/" target="_blank">
                     <span class="mbr-iconfont socicon socicon-linkedin"></span>
                   </a>
                 </div>
@@ -663,7 +663,7 @@
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
-                  <a href="https://instagram.com/mobirise" target="_blank">
+                  <a href="https://www.linkedin.com/in/gabrielavelitch/" target="_blank">
                     <span class="mbr-iconfont socicon socicon-linkedin"></span>
                   </a>
                 </div>
