--- a/pages/about.html
+++ b/pages/about.html
@@ -83,7 +83,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p style="text-align: center" class="mbr-timeline-date display-7">
+              <p style="text-align: center" p style="text-align: center" class="mbr-timeline-date display-7">
                 November 2016</p>
             </div>
           </div>
@@ -107,7 +107,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p class="mbr-timeline-date display-7">
+              <p p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -131,7 +131,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p class="mbr-timeline-date display-7">
+              <p p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -155,7 +155,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p class="mbr-timeline-date display-7">
+              <p p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -179,7 +179,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p class="mbr-timeline-date display-7">
+              <p p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -203,7 +203,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p class="mbr-timeline-date display-7">
+              <p p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -227,7 +227,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p class="mbr-timeline-date display-7">
+              <p p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -251,7 +251,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p class="mbr-timeline-date display-7">
+              <p p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -275,7 +275,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p class="mbr-timeline-date display-7">
+              <p p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -299,7 +299,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p class="mbr-timeline-date display-7">
+              <p p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -323,7 +323,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p class="mbr-timeline-date display-7">
+              <p p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -347,7 +347,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p class="mbr-timeline-date display-7">
+              <p p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
