--- a/pages/about.html
+++ b/pages/about.html
@@ -84,13 +84,13 @@
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
               <p style="text-align: center" p style="text-align: center" class="mbr-timeline-date display-7">
-                November 2016</p>
+                November<br>2016</p>
             </div>
           </div>
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="assets/images/features1.jpg" alt="Mobirise" title="">
+              <img src="https://www.gabrielavelitch.com/img/porfolio/aula_bianchini.jpg" alt="Mobirise" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
