--- a/pages/about.html
+++ b/pages/about.html
@@ -90,7 +90,7 @@
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/porfolio/aula_bianchini.jpg" alt="Mobirise" title="">
+              <img src="https://www.gabrielavelitch.com/img/porfolio/aula_bianchini.jpg" alt="Aula Bianchini, Conservatorio Santa Cecilia Roma" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
