--- a/pages/about.html
+++ b/pages/about.html
@@ -76,7 +76,7 @@
     <div class="container">
       <div class="mbr-section-head">
         <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-          <strong>I would like to know how sound is made, recreate it and move it in space</strong>
+          <strong><i>"I would like to know how sound is made, recreate it and move it in space"</i></strong>
         </h3>
       </div>
       <div class="timelines-container mt-4">
