--- a/pages/about.html
+++ b/pages/about.html
@@ -84,22 +84,22 @@
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
               <p style="text-align: center" p style="text-align: center" class="mbr-timeline-date display-7">
-                November<br>2016</p>
+                November 2016</p>
             </div>
           </div>
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/porfolio/aula_bianchini.jpg" alt="Aula Bianchini, Conservatorio Santa Cecilia Roma" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/aula_bianchini.jpg" alt="Aula Bianchini, Conservatorio Santa Cecilia Roma" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
             <div class="timeline-text-wrapper">
               <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>Santa Cecilia - BA in Electroacustic Composition</strong>
+                <strong>Conservatorio Santa Cecilia - BA in Electroacustic Composition</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. You don't have to code to create your own site. Select one of available themes in the Mobirise sitebuilder.
+                Surrounded by the a 21
               </p>
             </div>
           </div>
