--- a/pages/about.html
+++ b/pages/about.html
@@ -135,13 +135,14 @@
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
               <p p style="text-align: center" class="mbr-timeline-date display-7">
-                23 April 2025</p>
+                December 2018</p>
             </div>
           </div>
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="assets/images/features3.jpg" alt="Mobirise" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/crm_team.jpg" alt="CRM centro ricerrche musicali team" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/olofoni_2.jpg" alt="CRM centro ricerrche musicali team" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
