--- a/pages/about.html
+++ b/pages/about.html
@@ -124,7 +124,8 @@
                 <strong>Concervatorio Santa Cecilia - AV Technician</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                In October 2018 I was nominated Sound and Visual Technician at the Conservatoire Santa Cecilia, a role that has evolved to the position of Senior and has been my profession until May 2022. In the last three years I have been the main AV
+                In October 2018 I was nominated Sound and Visual Technician at the Conservatoire Santa Cecilia, a role that has evolved to the position of Senior and has been my profession until May 2022. In the last three years I have been the main
+                AV
                 technician working in the building, so I had all the responsibilities within the sound department. Here I had the opportunity to work with talented artists. These sessions required a deep understanding of acoustics, microphone
                 placement, and mixing techniques, and I was able to bring my technical knowledge and artistic vision to the table to help the artists achieve their desired sound.
               </p>
@@ -148,10 +149,11 @@
           <div class="col-12 col-md-6">
             <div class="timeline-text-wrapper">
               <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>Form Builder</strong>
+                <strong>Centro Ricerche Musicali - Sound & Production Techncician</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. Select the theme that suits you. Each theme in the Mobirise site builder contains a set of unique blocks.
+                CRM: a centre where artists, musicians, scientists, architects and others work together. With them I’ve worked for festivals, concerts and sound art installations; from building the equipment till the performance, I was taking care of
+                all the sound aspects. The best aspect of this role was that they were considering me as a creative more than a technician, so I had the possibility to grow really close to artistic management.
               </p>
             </div>
           </div>
