--- a/pages/about.html
+++ b/pages/about.html
@@ -108,7 +108,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p p style="text-align: center" class="mbr-timeline-date display-7">
+              <p style="text-align: center" class="mbr-timeline-date display-7">
                 October 2018</p>
             </div>
           </div>
@@ -135,7 +135,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p p style="text-align: center" class="mbr-timeline-date display-7">
+              <p style="text-align: center" class="mbr-timeline-date display-7">
                 December 2018</p>
             </div>
           </div>
@@ -161,7 +161,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p p style="text-align: center" class="mbr-timeline-date display-7">
+              <p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -185,7 +185,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p p style="text-align: center" class="mbr-timeline-date display-7">
+              <p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -209,7 +209,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p p style="text-align: center" class="mbr-timeline-date display-7">
+              <p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -233,7 +233,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p p style="text-align: center" class="mbr-timeline-date display-7">
+              <p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -257,7 +257,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p p style="text-align: center" class="mbr-timeline-date display-7">
+              <p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -281,7 +281,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p p style="text-align: center" class="mbr-timeline-date display-7">
+              <p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -305,7 +305,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p p style="text-align: center" class="mbr-timeline-date display-7">
+              <p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -329,7 +329,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p p style="text-align: center" class="mbr-timeline-date display-7">
+              <p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
@@ -353,7 +353,7 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p p style="text-align: center" class="mbr-timeline-date display-7">
+              <p style="text-align: center" class="mbr-timeline-date display-7">
                 23 April 2025</p>
             </div>
           </div>
