--- a/pages/about.html
+++ b/pages/about.html
@@ -162,13 +162,13 @@
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
               <p style="text-align: center" class="mbr-timeline-date display-7">
-                23 April 2025</p>
+                Music Devices Design</p>
             </div>
           </div>
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="assets/images/features3.jpg" alt="Mobirise" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/di_box_0.jpg" alt="dibox" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
