--- a/pages/about.html
+++ b/pages/about.html
@@ -162,7 +162,7 @@
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
               <p style="text-align: center" class="mbr-timeline-date display-7">
-                Music Devices Design</p>
+                Skills</p>
             </div>
           </div>
           <span class="iconBackground"></span>
@@ -174,7 +174,7 @@
           <div class="col-12 col-md-6">
             <div class="timeline-text-wrapper">
               <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>Form Builder</strong>
+                <strong>Music Devices Desig</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
                 This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. Use Mobirise website building software to create multiple sites for commercial and non-profit projects.
