--- a/pages/about.html
+++ b/pages/about.html
@@ -168,16 +168,18 @@
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/portfolio/di_box_0.jpg" alt="dibox" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/di_box_1.jpg" alt="dibox" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/di_box_2.jpg" alt="dibox" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/di_box_3.jpg" alt="dibox" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
             <div class="timeline-text-wrapper">
               <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>Music Devices Desig</strong>
+                <strong>Music Devices Design</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. Use Mobirise website building software to create multiple sites for commercial and non-profit projects.
+                I love to design music devices. Find out more.
               </p>
             </div>
           </div>
