--- a/pages/about.html
+++ b/pages/about.html
@@ -152,7 +152,8 @@
                 <strong>Centro Ricerche Musicali - Sound & Production Techncician</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                The CRM - Centro Ricerche Musicali is a centre where artists, musicians, scientists, architects and researchers work together. With them I’ve worked for festivals, concerts and sound art installations; from building the equipment till the performance, I was taking care of
+                The CRM - Centro Ricerche Musicali is a centre where artists, musicians, scientists, architects and researchers work together. With them I’ve worked for festivals, concerts and sound art installations; from building the equipment till
+                the performance, I was taking care of
                 all the sound aspects. The best aspect of this role was that they were considering me as a creative more than a technician, so I had the possibility to grow really close to artistic management.
               </p>
             </div>
@@ -188,23 +189,25 @@
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
               <p style="text-align: center" class="mbr-timeline-date display-7">
-                23 April 2025</p>
+                December 2018 - October 2020</p>
             </div>
           </div>
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="assets/images/features3.jpg" alt="Mobirise" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/mare_oscuro.jpg" alt="dibox" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/with_lupone.jpg" alt="dibox" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/planofoni.jpg" alt="dibox" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
             <div class="timeline-text-wrapper">
               <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>Form Builder</strong>
+                <strong>CRM</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. You don't have to code to create your own site. Select one of available themes in the Mobirise sitebuilder.
-              </p>
+                I've been lucky to grow my skills in a multidisciplinary context where arts, sciences and technologies are merged all in one. My personal and team projects have consistently been a product of those fields and the opportunity to work
+                with you would be a continuum of my passions. </p>
             </div>
           </div>
         </div>
@@ -242,7 +245,9 @@
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="assets/images/features3.jpg" alt="Mobirise" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/di_box_3.jpg" alt="dibox" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/di_box_3.jpg" alt="dibox" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/di_box_3.jpg" alt="dibox" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
