--- a/pages/about.html
+++ b/pages/about.html
@@ -143,6 +143,7 @@
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
               <img src="https://www.gabrielavelitch.com/img/portfolio/crm_team.jpg" alt="CRM centro ricerrche musicali team" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/crm.jpg" alt="CRM centro ricerrche musicali team" title="">
               <img src="https://www.gabrielavelitch.com/img/portfolio/olofoni_2.jpg" alt="CRM centro ricerrche musicali team" title="">
             </div>
           </div>
